Fixes legibility in the footer for various colour swatches (DT-1327)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -115,6 +115,9 @@ footer.bk-footer {
         color: @color-swatch1;
         padding-bottom: 20px;
     }
+    .widget.content * {
+        color: @color-swatch1;
+    }
 }
 
 footer.bk-footer h4 {
